--- a/src/Cursor.scss
+++ b/src/Cursor.scss
@@ -1,23 +1,55 @@
 .cursor {
    z-index: 1000000;
-   width: 20px;
-   height: 20px;
-    border-radius: 50%;
-   background-color: rgb(255, 255, 255);
+   width: 0px;
+   height: 0px;
+   // border-radius: 50%;
+   background-color: transparent;
    //    border: 1px solid $black;
    pointer-events: none;
-   overflow: hidden;
    transform: translate3d(0, 0, 0);
 
    position: fixed;
    backface-visibility: hidden;
-   transition: transform .4s ease;
+   transition: transform 0.4s ease;
    //    mix-blend-mode: difference;
-   //     transition: all 0.4s ease;
-   //    transition-property: background, transform;
+   // transition: all 0.4s ease;
+   // transition-property: background, transform;
 }
-.link-grow{
-   transform: scale(3.5);
-   background-color: rgb(10, 10, 10);
 
+.link-square::after {
+   content: 'Square';
+   color: rgb(255, 255, 255);
+   padding: 10px 25px;
+   background-color: rgb(0, 0, 0);
+}
+
+.link-rectangle::after {
+   content: 'Rectangle';
+   color: rgb(255, 255, 255);
+   padding: 10px 25px;
+   background-color: rgb(0, 0, 0);
+}
+.link-cercle::after {
+   content: 'Cercle';
+   color: rgb(255, 255, 255);
+   padding: 10px 25px;
+   background-color: rgb(0, 0, 0);
+}
+.link-triangle::after {
+   content: 'Triangle';
+   color: rgb(255, 255, 255);
+   padding: 10px 25px;
+   background-color: rgb(0, 0, 0);
+}
+.link-star::after {
+   content: 'Star';
+   color: rgb(255, 255, 255);
+   padding: 10px 25px;
+   background-color: rgb(0, 0, 0);
+}
+.link-heart::after {
+   content: 'Heart';
+   color: rgb(255, 255, 255);
+   padding: 10px 25px;
+   background-color: rgb(0, 0, 0);
 }
