--- a/src/index.css
+++ b/src/index.css
@@ -69,6 +69,7 @@ video {
    text-size-adjust: none;
 }
 body {
+   background-color: #282c34;
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
     'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
